--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8"/>
+        <title>Bài 1</title>
+        <link rel ="stylesheet" href="index.css">
+        <link rel ="stylesheet" href="index2.css">
+    </head>
+    <body>
+        <a href="home.html" target="_self">Hello</a>
+        <p>Chào mừng bạn đến với trang web bán sách trực tuyến hàng đầu của chúng tôi! Chúng tôi tự hào cung cấp một kho sách phong phú, đa dạng từ các thể loại văn học, kinh tế, kỹ năng sống đến sách thiếu nhi. Với giao diện thân thiện, dễ sử dụng, bạn có thể dễ dàng tìm kiếm và chọn lựa những cuốn sách yêu thích chỉ trong vài cú click chuột. Chúng tôi cam kết mang đến cho bạn những cuốn sách chất lượng, từ các tác giả nổi tiếng và uy tín. Đội ngũ nhân viên tận tâm của chúng tôi luôn sẵn sàng hỗ trợ và tư vấn cho bạn bất cứ khi nào bạn cần.</p>
+        <p>Chào mừng bạn đến với trang web bán sách trực tuyến hàng đầu của chúng tôi! Chúng tôi tự hào cung cấp một kho sách phong phú, đa dạng từ các thể loại văn học, kinh tế, kỹ năng sống đến sách thiếu nhi. Với giao diện thân thiện, dễ sử dụng, bạn có thể dễ dàng tìm kiếm và chọn lựa những cuốn sách yêu thích chỉ trong vài cú click chuột. Chúng tôi cam kết mang đến cho bạn những cuốn sách chất lượng, từ các tác giả nổi tiếng và uy tín. Đội ngũ nhân viên tận tâm của chúng tôi luôn sẵn sàng hỗ trợ và tư vấn cho bạn bất cứ khi nào bạn cần.</p>
+
+    </body>
+</html>
